corrected INT length in schema file

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/jonnyboy808/my-employee-tracker#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "inquirer": "^8.2.4",
+    "mysql": "^2.18.1",
     "mysql2": "^3.2.4"
   }
 }
